fix partner landing page tile overflowing (#286)

--- a/liqd_product/assets/scss/components/_partner.scss
+++ b/liqd_product/assets/scss/components/_partner.scss
@@ -26,10 +26,6 @@
 }
 
 @media (min-width: $breakpoint) {
-    .partner__tile {
-        height: 210px;
-    }
-
     .partner__logo-box {
         padding: $padding;
     }
